@@ -114,11 +114,12 @@
     <Compile Include="revit-scripts\ShowGeoegraphicData.cs" />
     <Compile Include="revit-scripts\ShowHideWorksetsInView.cs" />
     <Compile Include="revit-scripts\StretchLevelsToCropRegion.cs" />
-    <Compile Include="revit-scripts\SwapFamilyTypeOfSelectedElements.cs" />
+    <Compile Include="revit-scripts\test33.cs" />
     <Compile Include="revit-scripts\SelectLastCreatedSection.cs" />
     <Compile Include="revit-scripts\SwitchPhase.cs" />
     <Compile Include="revit-scripts\SwitchToLastPhase.cs" />
     <Compile Include="revit-scripts\RehostToJoinedWalls.cs" />
+    <Compile Include="revit-scripts\LabelAreasOfSelectedViews.cs" />
     <Compile Include="revit-scripts\ToggleLevelBubblesInSelectedViews.cs">
       <SubType>Form</SubType>
     </Compile>
