@@ -923,3 +923,8 @@ couldn't find any coordinate values when parsing .rvt file directly
 *** 04
 **** =17:00= couldn't get DirectContext3D API to work to show even anything on screen
 further research is needed
+** May
+*** 11
+**** =22:55= very disappointingly [[revit link display settings are not available via api][https://forums.autodesk.com/t5/revit-ideas/api-for-rvt-link-display-settings/idc-p/13624379]]
+this makes working with revit links very difficult
+for example changing "by linked view" setting across floors
